# libvmod-querystring

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG  CONTRIBUTORS  INSTALL  Integration.gmake  LICENSE  Makefile.am  README.rst  TODO.txt  autogen.sh  bootstrap  configure.ac  deb.am  dist.sh  lcov.am  rpm.am  vmod-querystring.spec  vmod-querystring.spec.in
debian/: changelog  changelog.in  control  control.in  copyright  copyright.in  rules
m4/: vmod-querystring.m4
redhat/: vmod-querystring.spec
rpm/: varnish-vmod-querystring.spec  varnish.fix_ppc64_upstream_bug_1194.patch  varnish.no_pcre_jit.patch
src/: Makefile.am  vmod.vcc  vmod_querystring.c  vmod_querystring.h  vmod_querystring.vcc  vmod_querystring.vcc.in  vmod_querystring3.vcc  vmod_querystring4.vcc
src/tests/: README  clean00_without_querystring_vmod.vtc  clean01_clean_in_vcl_hash.vtc  clean02_clean_empty_params.vtc  clean03_clean_all_params.vtc  e00001.vtc  f00001.vtc  f00002.vtc  f00003.vtc  f00004.vtc  f00005.vtc  f00006.vtc  f00007.vtc  f00008.vtc  filter00_without_querystring_vmod.vtc  filter01_filter_in_vcl_hash.vtc  filter02_filter_empty_parameters.vtc  filter03_filter_all_params.vtc  filter_except00_without_querystring_vmod.vtc  filter_except01_filter_in_vcl_hash.vtc  g00001.vtc  globfilter01_globfilter_in_vcl_hash.vtc  globfilter_except_01_globfilter_except_in_vcl_hash.vtc  m00001.vtc  p00001.vtc  p00002.vtc  p00003.vtc  r00022.vtc  r00026.vtc  regfilter01_regfilter_in_vcl_hash.vtc  regfilter02_regfilter_empty_parameters.vtc  regfilter02_regfilter_with_bad_regex.vtc  regfilter03_regfilter_empty_parameters.vtc  regfilter04_regfilter_all_params.vtc  regfilter05_allow_params.vtc  regfilter_except01_regfilter_in_vcl_hash.vtc  remove00_without_querystring_vmod.vtc  remove01_remove_in_vcl_hash.vtc  sort00_without_querystring_vmod.vtc  sort01_sort_in_vcl_hash.vtc  (+6 more)
travis/: create_pbuilder.sh  create_sbuild.sh  install_varnish.sh
